syntax = "proto3";

option go_package = "./service";

service LockService {
  rpc Lock (LockRequest) returns (LockReply) {}
  rpc UnLock (UnLockRequest) returns (UnLockReply) {}
  rpc ForceLock (ForceLockRequest) returns (ForceLockReply) {}
  rpc ForceUnLock (ForceUnLockRequest) returns (ForceUnLockReply) {}
}

message LockRequest {
  string clientId = 1;
  string lockName = 2;
}

message LockReply {
  bool result = 1;
  string msg = 2;
}

message UnLockRequest {
  string clientId = 1;
  string lockName = 2;
}

message UnLockReply {
  bool result = 1;
  string msg = 2;
}

message ForceLockRequest {
  string clientId = 1;
  string lockName = 2;
}

message ForceLockReply {
  bool result = 1;
  string msg = 2;
}

message ForceUnLockRequest {
  string lockName = 1;
}

message ForceUnLockReply {
  bool result = 1;
  string msg = 2;
}

